# wollama

./: .cz-config.js  .eslintrc.cjs  .example.env  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCH.md  CHANGELOG.md  HARNESS.md  PROJECT.md  QWEN.md  README.md  TODO.md  audit-report.json  book.html  capacitor.config.ts  eslint.config.js  link-modules.js  package-lock.json  package.json  postcss.config.js  postcss.config.mjs  run-module.js  setup-audio.js  setup-python.js  svelte.config.js  tailwind.config.js  timer.txt  ts-loader.js  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/hooks/: context-mode.json
.github/workflows/: ci.yml
_bmad-output/: AUTO_FIX_SUMMARY.md  FIX_COMPLETE_SUMMARY.md
_bmad-output/code-review/: 5-4-code-review.md
_bmad-output/implementation-artifacts/: 1-1-display-onboarding-wizard-on-first-launch.md  1-2-capture-and-validate-ollama-server-url.md  1-3-handle-connection-failures-gracefully.md  1-4-persist-server-configuration.md  2-1-display-system-companions-COMPLETE.md  2-1-display-system-companions.md  2-2-customize-default-companions-COMPLETE.md  2-2-customize-default-companions.md  2-3-2-4-persistence-ownership-COMPLETE.md  2-3-persist-user-companions-across-app-updates.md  5-1-unit-tests-for-companion-ownership-model.md  5-2-integration-tests-for-offline-online-sync.md  5-3-e2e-test-for-onboarding-journey.md  5-4-e2e-test-for-multi-device-sync.md  SESSION-SUMMARY-consolidation-sprint.md  epic-3-chat-interface-COMPLETE.md  epic-4-implementation-COMPLETE.md  (+4 more)
android/: gradle.properties
bmad/: config.yaml  dashboard.md  status.yaml
client/: .prettierignore  capacitor.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.ts  vitest.setup.ts
electron/: main.js
scripts/: verify-builds.js
server/: config.ts  package-lock.json  package.json  server.ts  setup-audio.js  test-server.ts  tsconfig.json  vitest.config.ts
shared/: package.json
src/: app.d.ts  app.html  hooks.server.ts  i18n.js  prompt.txt  promptLib.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.migrated.json  migrated.json
src-tauri/database/: IDENTITY  LOG  LOG.old.1738889302085098  LOG.old.1738895251492478  MANIFEST-000013  MANIFEST-000201  MANIFEST-000205  OPTIONS-000011  OPTIONS-000199
src-tauri/database/wollama/: IDENTITY  LOG  MANIFEST-001503
src-tauri/database_11464/: IDENTITY  LOG  MANIFEST-000005
src-tauri/database_3112/: IDENTITY  LOG  MANIFEST-000005
src-tauri/database_33720/: IDENTITY  LOG  MANIFEST-000005
src-tauri/database_34964/: IDENTITY  LOG  MANIFEST-000005
src-tauri/python/: generate_embeddings.py
src-tauri/resources/schemas/: db_schema.json
src-tauri/src/: chromadb_mod.rs  db copy.rs  db.rs  files.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/db/: idb.rs  types.rs
src-tauri/src/schema/: db_schema.json
static/: manifest.json
tests/: main.test.js
(+729 files in other folders)
