[package]
name = "wollama"
version = "0.1.0"
description = "A wollama client"
authors = ["you"]
license = ""
repository = ""
default-run = "wollama"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
window-vibrancy = "0.5.0"
actix-web = "4.8.0"
scraper = "0.19.0"
reqwest = "0.12.5"
anyhow = "1.0.86"
tokio = { version = "1.38", features = ["full"] }
urlencoding = "2.1.3"
url = "2.5.2"
qdrant-client = "1.10.3"
ollama-rs = "0.2.0"
walkdir = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
