[package]
name = "wollama"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lebrun Meddy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wollama_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22.0"
anyhow = "1.0.86"
reqwest = "0.12.7"
log = "0.4.22"
chrono = { version = "0.4.39", features = ["serde"] }
rocksdb = { version = "0.23.0", features = ["default"] }
dirs = "6.0.0"
lazy_static = "1.5.0"
chromadb = "2.2.1"
notify = "8.0.0"

